--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #1e1e2f;
+  background-color:#0d85e0;
   color: #e0e0f1;
   display: flex;
   flex-direction: column;
