--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
+
 /* Global Styles */
+#contacts {
+  background: #1f4068;
+  padding: 30px;
+  width: 90%;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
 * {
   margin: 0;
   padding: 0;
